--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ authors = [
 dependencies = [
     "django>=4.2.1",
     "djangorestframework>=3.14.0",
+    "setuptools>=68.1.2",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
+
+[tool.pdm]
